<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>cv.igrp.platform</groupId>
	<artifactId>access-management</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>igrp_platform_access_management</name>
	<description>IGRP Platform Access Management</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
  <repositories>
    <repository>
      <id>igrp-framework-releases</id>
      <url>https://sonatype.nosi.cv/repository/igrp-framework-releases/</url>
    </repository>
  </repositories>
	<properties>
		<java.version>21</java.version>
	</properties>
	<dependencies>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.8.5</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
		  <groupId>org.springframework.data</groupId>
		  <artifactId>spring-data-envers</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>

		<!-- Security Dependencies -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>


		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-lang3</artifactId>
		</dependency>
		<dependency>
		    <groupId>com.fasterxml.jackson.dataformat</groupId>
		    <artifactId>jackson-dataformat-xml</artifactId>
		</dependency>


		<!-- Email -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>


		<!-- IGRP dependencies -->
		<dependency>
			<groupId>cv.igrp.framework</groupId>
			<artifactId>core</artifactId>
			<version>0.0.1-alpha</version>
		</dependency>
		<dependency>
			<groupId>cv.igrp.framework</groupId>
			<artifactId>stereotype</artifactId>
			<version>0.0.1-alpha</version>
		</dependency>
		<!-- IGRP Mail Libraries -->
		<dependency>
			<groupId>cv.igrp.platform</groupId>
			<artifactId>mail-smtp</artifactId>
			<version>0.0.1-alpha</version>
		</dependency>
		<!-- IGRP File Libraries -->
		<dependency>
			<groupId>cv.igrp.platform</groupId>
			<artifactId>file-manager-core</artifactId>
			<version>0.0.1-alpha</version>
		</dependency>
		<dependency>
			<groupId>cv.igrp.platform</groupId>
			<artifactId>file-manager-minio</artifactId>
			<version>0.0.1-alpha</version>
		</dependency>



		<!-- OpenTelemetry SDK Nativo -->
		<dependency>
			<groupId>io.opentelemetry</groupId>
			<artifactId>opentelemetry-sdk</artifactId>
			<version>1.32.0</version>
		</dependency>
		<dependency>
			<groupId>io.opentelemetry</groupId>
			<artifactId>opentelemetry-exporter-otlp</artifactId>
			<version>1.32.0</version>
		</dependency>
		<!--Observability dependencies-->
		<dependency>
		  <groupId>org.springframework.boot</groupId>
		  <artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
		  <groupId>io.micrometer</groupId>
		  <artifactId>micrometer-registry-prometheus</artifactId>
		  <scope>runtime</scope>
		</dependency>
		<dependency>
		  <groupId>io.micrometer</groupId>
		  <artifactId>micrometer-tracing-bridge-otel</artifactId>
		</dependency>
		<dependency>
		  <groupId>io.opentelemetry</groupId>
		  <artifactId>opentelemetry-exporter-zipkin</artifactId>
		</dependency>

  
  </dependencies>
	<build>
		<plugins>
		       <plugin>
		           <groupId>org.graalvm.buildtools</groupId>
		           <artifactId>native-maven-plugin</artifactId>
		       </plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>
</project>